--- a/index.html
+++ b/index.html
@@ -30,20 +30,15 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            9AM
-          </div>
-          <div class="col-sm">
-            <input type="text" id="textbox9am" name="Name">
-        
-          </div>
-          <div class="col-sm" id="save">
-            Save
-          </div>
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+        9AM
         </div>
-      </div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
     </div>
     
 
